--- a/css/style.css
+++ b/css/style.css
@@ -18,4 +18,10 @@ body {
 .parceiros{
     background-color: #58B2FA;
 }
+.bg-footer {
+    background-color: #2F4858;
+    color: white;
+    
+
+}
 
