--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,9 @@ body {
     background-color: #58B2FA;
 }
 .bg-footer {
-    background-color: #2F4858;
+    background-color: #352D39;
     color: white;
+    text-align: center;
     
 
 }
